tests/snapshot/snapshots/snapshot__error_annotated_record_pattern_typecheck_fail.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot
---
error: incompatible types
  ┌─ [INPUTS_PATH]/errors/annotated_record_pattern_typecheck_fail.ncl:2:28
  │
2 │   let { x : Bool } = { x = 5 } in
  │                            ^ this expression
  │
  = Expected an expression of type `Bool`
  = Found an expression of type `Number`
  = These types are not compatible


